--- a/index.html
+++ b/index.html
@@ -102,17 +102,18 @@
   <!-- MODAL -->
   <div class="modal" id="modal" aria-hidden="true" role="dialog" aria-label="Gallery preview">
     <div class="modal-backdrop" data-close></div>
-    <div class="modal-panel glass">
+
+    <div class="modal-panel glass" role="document" aria-modal="true">
       <button class="modal-close" type="button" aria-label="Close" data-close>✕</button>
+
       <img class="modal-img" id="modalImg" alt="" />
+
+      <div class="modal-bar">
+        <div class="modal-title" id="modalTitle">Gallery Item</div>
+        <div class="modal-hint">Browse-only</div>
+      </div>
     </div>
   </div>
-
-  <script>
-    // footer year (safe even if you keep app.js separate)
-    const y = document.getElementById("year");
-    if (y) y.textContent = String(new Date().getFullYear());
-  </script>
 
   <script src="./app.js"></script>
 </body>
