--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Revival — Gifts & Apparel</title>
-  <meta name="description" content="A warm, faith-forward boutique for gifts, apparel, and home. Browse our gallery and visit in-store." />
+
+  <meta name="description" content="Revival Unique Gifts & Apparel — a faith-forward boutique in downtown Cleveland, Georgia." />
   <meta name="theme-color" content="#241b12" />
+
+  <!-- Heavenly font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -14,7 +21,7 @@
 
     <!-- HERO -->
     <section class="hero">
-      <div class="panel glass center">
+      <div class="panel glass center hero-left">
         <div class="brand">
           <div class="brand-mark" aria-hidden="true"></div>
           <div class="brand-text">
@@ -43,6 +50,37 @@
           <a class="btn btn-gold" href="#gallery">Browse the Gallery</a>
           <a class="btn btn-glass" href="#visit">Store Info</a>
         </div>
+
+        <!-- ✅ Social buttons bottom-left panel -->
+        <div class="socials" aria-label="Social links">
+          <a
+            href="https://www.instagram.com/revivalgiftsapparel/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Revival on Instagram"
+            class="social-link"
+            title="Instagram"
+          >
+            <!-- Instagram -->
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.4A2.9 2.9 0 1 1 14.9 12 2.9 2.9 0 0 1 12 14.9zM17.5 6.4a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/>
+            </svg>
+          </a>
+
+          <a
+            href="https://www.facebook.com/revivalgiftsapparel/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Revival on Facebook"
+            class="social-link"
+            title="Facebook"
+          >
+            <!-- Facebook -->
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.7V12h2.7V9.8c0-2.7 1.6-4.2 4.1-4.2 1.2 0 2.4.2 2.4.2v2.6h-1.3c-1.3 0-1.7.8-1.7 1.6V12h2.9l-.5 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
+            </svg>
+          </a>
+        </div>
       </div>
 
       <figure class="panel glass image-panel center">
@@ -65,31 +103,38 @@
     <section id="visit" class="section">
       <div class="panel glass center section-head">
         <h2>Visit</h2>
-        <p class="tight">Downtown • Main Street</p>
-        <p class="small">Replace hours, address, and contact info when ready.</p>
+        <p class="tight">14 W Jarrard St • Cleveland, GA 30528</p>
+        <p class="small">(706) 969-1086 • revivalboutique@yahoo.com</p>
       </div>
 
       <div class="visit-grid">
         <div class="panel glass center">
           <h3>Hours</h3>
           <div class="kv">
-            <div><span>Mon–Fri</span><span>10–6</span></div>
-            <div><span>Saturday</span><span>10–7</span></div>
+            <div><span>Mon–Fri</span><span>10:00 AM – 5:00 PM</span></div>
+            <div><span>Saturday</span><span>10:00 AM – 5:00 PM</span></div>
             <div><span>Sunday</span><span>Closed</span></div>
           </div>
         </div>
 
         <div class="panel glass center">
-          <h3>Contact</h3>
-          <p class="small tight">hello@revivalshop.com</p>
-          <p class="small tight">(555) 555-5555</p>
-          <p class="small">Mockup contact info — swap to real.</p>
+          <h3>Location</h3>
+          <p class="small">Historic Downtown Cleveland Square</p>
+          <a
+            class="btn btn-gold"
+            href="https://www.google.com/maps/dir/?api=1&destination=14+W+Jarrard+St+Cleveland+GA+30528"
+            target="_blank"
+            rel="noopener"
+          >
+            Get Directions
+          </a>
         </div>
 
         <div class="panel glass center">
-          <h3>Location</h3>
-          <p class="small">Add a map link later.</p>
-          <p class="small">This is a “front porch” site: browse online, shop in-store.</p>
+          <h3>Contact</h3>
+          <p class="small tight">revivalboutique@yahoo.com</p>
+          <p class="small tight">(706) 969-1086</p>
+          <p class="small">For availability, visit us in-store or give us a call.</p>
         </div>
       </div>
     </section>
