--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <meta name="description" content="Revival Unique Gifts & Apparel — a faith-forward boutique in downtown Cleveland, Georgia." />
   <meta name="theme-color" content="#241b12" />
 
-  <!-- Heavenly font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -31,16 +26,11 @@
         </div>
 
         <h1>Warm, meaningful finds — curated with purpose.</h1>
+
         <p class="lead">
           A quiet place to browse. Earth tones, honest materials, and gold accents —
           designed to reflect the in-store experience.
         </p>
-
-        <div class="meta">
-          <span class="pill">Browse-only porch</span>
-          <span class="pill">Faith-forward boutique</span>
-          <span class="pill">In-store experience first</span>
-        </div>
 
         <div class="note">
           This gallery is for browsing inspiration. For availability, visit us or reach out.
@@ -51,34 +41,14 @@
           <a class="btn btn-glass" href="#visit">Store Info</a>
         </div>
 
-        <!-- ✅ Social buttons bottom-left panel -->
-        <div class="socials" aria-label="Social links">
-          <a
-            href="https://www.instagram.com/revivalgiftsapparel/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Revival on Instagram"
-            class="social-link"
-            title="Instagram"
-          >
-            <!-- Instagram -->
-            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.4A2.9 2.9 0 1 1 14.9 12 2.9 2.9 0 0 1 12 14.9zM17.5 6.4a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/>
-            </svg>
+        <!-- Social icons -->
+        <div class="socials">
+          <a href="https://www.instagram.com/revivalgiftsapparel/" target="_blank" aria-label="Instagram" class="social-link">
+            <svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.4A2.9 2.9 0 1 1 14.9 12 2.9 2.9 0 0 1 12 14.9zM17.5 6.4a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/></svg>
           </a>
 
-          <a
-            href="https://www.facebook.com/revivalgiftsapparel/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Revival on Facebook"
-            class="social-link"
-            title="Facebook"
-          >
-            <!-- Facebook -->
-            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.7V12h2.7V9.8c0-2.7 1.6-4.2 4.1-4.2 1.2 0 2.4.2 2.4.2v2.6h-1.3c-1.3 0-1.7.8-1.7 1.6V12h2.9l-.5 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
-            </svg>
+          <a href="https://www.facebook.com/revivalgiftsapparel/" target="_blank" aria-label="Facebook" class="social-link">
+            <svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.7V12h2.7V9.8c0-2.7 1.6-4.2 4.1-4.2 1.2 0 2.4.2 2.4.2v2.6h-1.3c-1.3 0-1.7.8-1.7 1.6V12h2.9l-.5 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
           </a>
         </div>
       </div>
@@ -95,7 +65,6 @@
         <h2>Browse the Gallery</h2>
         <p>Tap an item to view it larger. No ordering — just a calm place to explore.</p>
       </div>
-
       <div class="grid" id="grid" aria-label="Gallery"></div>
     </section>
 
@@ -120,12 +89,7 @@
         <div class="panel glass center">
           <h3>Location</h3>
           <p class="small">Historic Downtown Cleveland Square</p>
-          <a
-            class="btn btn-gold"
-            href="https://www.google.com/maps/dir/?api=1&destination=14+W+Jarrard+St+Cleveland+GA+30528"
-            target="_blank"
-            rel="noopener"
-          >
+          <a class="btn btn-gold" href="https://www.google.com/maps/dir/?api=1&destination=14+W+Jarrard+St+Cleveland+GA+30528" target="_blank">
             Get Directions
           </a>
         </div>
@@ -134,7 +98,7 @@
           <h3>Contact</h3>
           <p class="small tight">revivalboutique@yahoo.com</p>
           <p class="small tight">(706) 969-1086</p>
-          <p class="small">For availability, visit us in-store or give us a call.</p>
+          <p class="small">For availability, please visit us in store.</p>
         </div>
       </div>
     </section>
@@ -145,14 +109,11 @@
   </main>
 
   <!-- MODAL -->
-  <div class="modal" id="modal" aria-hidden="true" role="dialog" aria-label="Gallery preview">
+  <div class="modal" id="modal" aria-hidden="true">
     <div class="modal-backdrop" data-close></div>
-
-    <div class="modal-panel glass" role="document" aria-modal="true">
-      <button class="modal-close" type="button" aria-label="Close" data-close>✕</button>
-
+    <div class="modal-panel glass">
+      <button class="modal-close" data-close>✕</button>
       <img class="modal-img" id="modalImg" alt="" />
-
       <div class="modal-bar">
         <div class="modal-title" id="modalTitle">Gallery Item</div>
         <div class="modal-hint">Browse-only</div>
