--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <meta name="description" content="Revival Unique Gifts & Apparel — a faith-forward boutique in downtown Cleveland, Georgia." />
   <meta name="theme-color" content="#241b12" />
 
+  <!-- Icons (match GitHub filenames exactly) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.PNG">
+  <link rel="icon" type="image/png" sizes="192x192" href="./icon-192.PNG">
+  <link rel="apple-touch-icon" sizes="512x512" href="./icon-512.PNG">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Revival">
+
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -43,12 +52,12 @@
 
         <!-- Social icons -->
         <div class="socials">
-          <a href="https://www.instagram.com/revivalgiftsapparel/" target="_blank" aria-label="Instagram" class="social-link">
-            <svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.4A2.9 2.9 0 1 1 14.9 12 2.9 2.9 0 0 1 12 14.9zM17.5 6.4a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/></svg>
+          <a href="https://www.instagram.com/revivalgiftsapparel/" target="_blank" rel="noopener" aria-label="Instagram" class="social-link">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.4A2.9 2.9 0 1 1 14.9 12 2.9 2.9 0 0 1 12 14.9zM17.5 6.4a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/></svg>
           </a>
 
-          <a href="https://www.facebook.com/revivalgiftsapparel/" target="_blank" aria-label="Facebook" class="social-link">
-            <svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.7V12h2.7V9.8c0-2.7 1.6-4.2 4.1-4.2 1.2 0 2.4.2 2.4.2v2.6h-1.3c-1.3 0-1.7.8-1.7 1.6V12h2.9l-.5 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
+          <a href="https://www.facebook.com/revivalgiftsapparel/" target="_blank" rel="noopener" aria-label="Facebook" class="social-link">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.7V12h2.7V9.8c0-2.7 1.6-4.2 4.1-4.2 1.2 0 2.4.2 2.4.2v2.6h-1.3c-1.3 0-1.7.8-1.7 1.6V12h2.9l-.5 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
           </a>
         </div>
       </div>
@@ -89,7 +98,7 @@
         <div class="panel glass center">
           <h3>Location</h3>
           <p class="small">Historic Downtown Cleveland Square</p>
-          <a class="btn btn-gold" href="https://www.google.com/maps/dir/?api=1&destination=14+W+Jarrard+St+Cleveland+GA+30528" target="_blank">
+          <a class="btn btn-gold" href="https://www.google.com/maps/dir/?api=1&destination=14+W+Jarrard+St+Cleveland+GA+30528" target="_blank" rel="noopener">
             Get Directions
           </a>
         </div>
@@ -112,7 +121,7 @@
   <div class="modal" id="modal" aria-hidden="true">
     <div class="modal-backdrop" data-close></div>
     <div class="modal-panel glass">
-      <button class="modal-close" data-close>✕</button>
+      <button class="modal-close" data-close aria-label="Close">✕</button>
       <img class="modal-img" id="modalImg" alt="" />
       <div class="modal-bar">
         <div class="modal-title" id="modalTitle">Gallery Item</div>
