--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Revival — Gifts & Apparel</title>
-
-  <meta name="description" content="Revival Unique Gifts & Apparel — a faith-forward boutique in downtown Cleveland, Georgia." />
+  <meta name="description" content="A warm, faith-forward boutique for gifts, apparel, and home. Browse our gallery and visit in-store." />
   <meta name="theme-color" content="#241b12" />
 
-  <!-- Icons (match GitHub filenames exactly) -->
+  <!-- Icons (GitHub-named files) -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.PNG">
   <link rel="icon" type="image/png" sizes="192x192" href="./icon-192.PNG">
-  <link rel="apple-touch-icon" sizes="512x512" href="./icon-512.PNG">
-
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Revival">
+  <link rel="icon" type="image/png" sizes="512x512" href="./icon-512.PNG">
+  <link rel="apple-touch-icon" href="./icon-192.PNG">
 
   <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -25,7 +21,7 @@
 
     <!-- HERO -->
     <section class="hero">
-      <div class="panel glass center hero-left">
+      <div class="panel glass center">
         <div class="brand">
           <div class="brand-mark" aria-hidden="true"></div>
           <div class="brand-text">
@@ -50,14 +46,21 @@
           <a class="btn btn-glass" href="#visit">Store Info</a>
         </div>
 
-        <!-- Social icons -->
-        <div class="socials">
-          <a href="https://www.instagram.com/revivalgiftsapparel/" target="_blank" rel="noopener" aria-label="Instagram" class="social-link">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.4A2.9 2.9 0 1 1 14.9 12 2.9 2.9 0 0 1 12 14.9zM17.5 6.4a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/></svg>
+        <!-- Socials live at the bottom of the left hero panel -->
+        <div class="socials" aria-label="Social links">
+          <!-- Update these hrefs to the shop’s actual pages when you have them -->
+          <a class="social-link" href="#" target="_blank" rel="noopener" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9z"/>
+              <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"/>
+              <path d="M17.6 6.4a1.2 1.2 0 1 1 0 2.4 1.2 1.2 0 0 1 0-2.4z"/>
+            </svg>
           </a>
 
-          <a href="https://www.facebook.com/revivalgiftsapparel/" target="_blank" rel="noopener" aria-label="Facebook" class="social-link">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.7V12h2.7V9.8c0-2.7 1.6-4.2 4.1-4.2 1.2 0 2.4.2 2.4.2v2.6h-1.3c-1.3 0-1.7.8-1.7 1.6V12h2.9l-.5 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
+          <a class="social-link" href="#" target="_blank" rel="noopener" aria-label="Facebook">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.3 0-1.3-.1-2.6-.1-2.6 0-4.3 1.6-4.3 4.5V11H7.2v3h2.7v8h3.6z"/>
+            </svg>
           </a>
         </div>
       </div>
@@ -74,6 +77,7 @@
         <h2>Browse the Gallery</h2>
         <p>Tap an item to view it larger. No ordering — just a calm place to explore.</p>
       </div>
+
       <div class="grid" id="grid" aria-label="Gallery"></div>
     </section>
 
@@ -82,7 +86,7 @@
       <div class="panel glass center section-head">
         <h2>Visit</h2>
         <p class="tight">14 W Jarrard St • Cleveland, GA 30528</p>
-        <p class="small">(706) 969-1086 • revivalboutique@yahoo.com</p>
+        <p class="small tight">(706) 969-1086 • revivalboutique@yahoo.com</p>
       </div>
 
       <div class="visit-grid">
@@ -97,10 +101,15 @@
 
         <div class="panel glass center">
           <h3>Location</h3>
-          <p class="small">Historic Downtown Cleveland Square</p>
-          <a class="btn btn-gold" href="https://www.google.com/maps/dir/?api=1&destination=14+W+Jarrard+St+Cleveland+GA+30528" target="_blank" rel="noopener">
-            Get Directions
-          </a>
+          <p class="small tight">Historic Downtown Cleveland Square</p>
+          <div class="cta cta-visit">
+            <a
+              class="btn btn-gold"
+              href="https://www.google.com/maps/search/?api=1&query=14%20W%20Jarrard%20St%2C%20Cleveland%2C%20GA%2030528"
+              target="_blank"
+              rel="noopener"
+            >Get Directions</a>
+          </div>
         </div>
 
         <div class="panel glass center">
@@ -118,17 +127,25 @@
   </main>
 
   <!-- MODAL -->
-  <div class="modal" id="modal" aria-hidden="true">
+  <div class="modal" id="modal" aria-hidden="true" role="dialog" aria-label="Gallery preview">
     <div class="modal-backdrop" data-close></div>
+
     <div class="modal-panel glass">
-      <button class="modal-close" data-close aria-label="Close">✕</button>
+      <button class="modal-close" type="button" aria-label="Close" data-close>✕</button>
+
       <img class="modal-img" id="modalImg" alt="" />
-      <div class="modal-bar">
+
+      <div class="modal-bar" aria-hidden="false">
         <div class="modal-title" id="modalTitle">Gallery Item</div>
-        <div class="modal-hint">Browse-only</div>
+        <div class="modal-hint">Tap outside or press Esc to close</div>
       </div>
     </div>
   </div>
+
+  <script>
+    const y = document.getElementById("year");
+    if (y) y.textContent = String(new Date().getFullYear());
+  </script>
 
   <script src="./app.js"></script>
 </body>
