--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="description" content="A warm, faith-forward boutique for gifts, apparel, and home. Browse our gallery and visit in-store." />
   <meta name="theme-color" content="#241b12" />
 
-  <!-- Icons (GitHub-named files) -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.PNG">
-  <link rel="icon" type="image/png" sizes="192x192" href="./icon-192.PNG">
-  <link rel="icon" type="image/png" sizes="512x512" href="./icon-512.PNG">
-  <link rel="apple-touch-icon" href="./icon-192.PNG">
+  <!-- Icons (GitHub-named files, root) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32.PNG" />
+  <link rel="apple-touch-icon" sizes="192x192" href="./icon-192.PNG" />
+  <link rel="icon" type="image/png" sizes="192x192" href="./icon-192.PNG" />
+  <link rel="icon" type="image/png" sizes="512x512" href="./icon-512.PNG" />
 
   <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -21,7 +21,7 @@
 
     <!-- HERO -->
     <section class="hero">
-      <div class="panel glass center">
+      <div class="panel glass center hero-panel">
         <div class="brand">
           <div class="brand-mark" aria-hidden="true"></div>
           <div class="brand-text">
@@ -42,24 +42,25 @@
         </div>
 
         <div class="cta">
-          <a class="btn btn-gold" href="#gallery">Browse the Gallery</a>
-          <a class="btn btn-glass" href="#visit">Store Info</a>
+          <a class="btn btn-gold btn-sign" href="#gallery">Browse the Gallery</a>
+          <a class="btn btn-glass btn-sign" href="#visit">Store Info</a>
         </div>
 
-        <!-- Socials live at the bottom of the left hero panel -->
+        <!-- Social buttons (bottom of left hero panel) -->
         <div class="socials" aria-label="Social links">
-          <!-- Update these hrefs to the shop’s actual pages when you have them -->
-          <a class="social-link" href="#" target="_blank" rel="noopener" aria-label="Instagram">
+          <a class="social-link" href="https://www.instagram.com/revivalgiftsapparel/"
+             target="_blank" rel="noopener" aria-label="Instagram">
+            <!-- Instagram -->
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9z"/>
-              <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"/>
-              <path d="M17.6 6.4a1.2 1.2 0 1 1 0 2.4 1.2 1.2 0 0 1 0-2.4z"/>
+              <path d="M7.75 2h8.5C19.43 2 22 4.57 22 7.75v8.5C22 19.43 19.43 22 16.25 22h-8.5C4.57 22 2 19.43 2 16.25v-8.5C2 4.57 4.57 2 7.75 2Zm8.5 2h-8.5C5.68 4 4 5.68 4 7.75v8.5C4 18.32 5.68 20 7.75 20h8.5C18.32 20 20 18.32 20 16.25v-8.5C20 5.68 18.32 4 16.25 4Zm-4.25 3.25A4.75 4.75 0 1 1 7.25 12 4.75 4.75 0 0 1 12 7.25Zm0 2A2.75 2.75 0 1 0 14.75 12 2.75 2.75 0 0 0 12 9.25ZM17.5 6.7a.8.8 0 1 1-.8-.8.8.8 0 0 1 .8.8Z"/>
             </svg>
           </a>
 
-          <a class="social-link" href="#" target="_blank" rel="noopener" aria-label="Facebook">
+          <a class="social-link" href="https://www.facebook.com/revivalgiftsapparel/"
+             target="_blank" rel="noopener" aria-label="Facebook">
+            <!-- Facebook -->
             <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.3 0-1.3-.1-2.6-.1-2.6 0-4.3 1.6-4.3 4.5V11H7.2v3h2.7v8h3.6z"/>
+              <path d="M13.5 22v-8h2.7l.4-3H13.5V9.1c0-.9.3-1.5 1.6-1.5h1.7V5c-.3 0-1.4-.1-2.6-.1-2.6 0-4.4 1.6-4.4 4.6V11H7v3h3.1v8h3.4Z"/>
             </svg>
           </a>
         </div>
@@ -74,7 +75,7 @@
     <!-- GALLERY -->
     <section id="gallery" class="section">
       <div class="panel glass center section-head">
-        <h2>Browse the Gallery</h2>
+        <h2 class="sign">Browse the Gallery</h2>
         <p>Tap an item to view it larger. No ordering — just a calm place to explore.</p>
       </div>
 
@@ -84,14 +85,14 @@
     <!-- VISIT -->
     <section id="visit" class="section">
       <div class="panel glass center section-head">
-        <h2>Visit</h2>
+        <h2 class="sign">Visit</h2>
         <p class="tight">14 W Jarrard St • Cleveland, GA 30528</p>
-        <p class="small tight">(706) 969-1086 • revivalboutique@yahoo.com</p>
+        <p class="small">(706) 969-1086 • revivalboutique@yahoo.com</p>
       </div>
 
       <div class="visit-grid">
         <div class="panel glass center">
-          <h3>Hours</h3>
+          <h3 class="sign">Hours</h3>
           <div class="kv">
             <div><span>Mon–Fri</span><span>10:00 AM – 5:00 PM</span></div>
             <div><span>Saturday</span><span>10:00 AM – 5:00 PM</span></div>
@@ -100,20 +101,18 @@
         </div>
 
         <div class="panel glass center">
-          <h3>Location</h3>
+          <h3 class="sign">Location</h3>
           <p class="small tight">Historic Downtown Cleveland Square</p>
-          <div class="cta cta-visit">
-            <a
-              class="btn btn-gold"
-              href="https://www.google.com/maps/search/?api=1&query=14%20W%20Jarrard%20St%2C%20Cleveland%2C%20GA%2030528"
-              target="_blank"
-              rel="noopener"
-            >Get Directions</a>
+          <div class="cta cta-single">
+            <a class="btn btn-gold btn-sign" target="_blank" rel="noopener"
+               href="https://www.google.com/maps/search/?api=1&query=Revival+Unique+Gifts+%26+Apparel+14+W+Jarrard+St+Cleveland+GA+30528">
+              Get Directions
+            </a>
           </div>
         </div>
 
         <div class="panel glass center">
-          <h3>Contact</h3>
+          <h3 class="sign">Contact</h3>
           <p class="small tight">revivalboutique@yahoo.com</p>
           <p class="small tight">(706) 969-1086</p>
           <p class="small">For availability, please visit us in store.</p>
@@ -135,17 +134,12 @@
 
       <img class="modal-img" id="modalImg" alt="" />
 
-      <div class="modal-bar" aria-hidden="false">
+      <div class="modal-bar">
         <div class="modal-title" id="modalTitle">Gallery Item</div>
-        <div class="modal-hint">Tap outside or press Esc to close</div>
+        <div class="modal-hint">Tap outside to close • Esc</div>
       </div>
     </div>
   </div>
-
-  <script>
-    const y = document.getElementById("year");
-    if (y) y.textContent = String(new Date().getFullYear());
-  </script>
 
   <script src="./app.js"></script>
 </body>
