Fix punctuation and wording in index.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           </div>
         </div>
 
-        <h1>Warm, meaningful finds — curated with purpose.</h1>
+        <h1>Warm, meaningful finds ~ curated with purpose.</h1>
 
         <p class="lead">
-          A quiet place to browse. Earth tones, honest materials, and gold accents —
+          A quiet place to browse. Earth tones, honest materials, and rustic charm ~
           designed to reflect the in-store experience.
         </p>
 
@@ -76,7 +76,7 @@
     <section id="gallery" class="section">
       <div class="panel glass center section-head">
         <h2 class="sign">Browse the Gallery</h2>
-        <p>Tap an item to view it larger. No ordering — just a calm place to explore.</p>
+        <p>Tap an item to view it larger. No ordering, just a calm place to explore.</p>
       </div>
 
       <div class="grid" id="grid" aria-label="Gallery"></div>
