--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="brand-mark" aria-hidden="true"></div>
           <div class="brand-text">
             <div class="brand-name">Revival</div>
-            <div class="brand-tag">Gifts • Apparel • Home</div>
+            <div class="brand-tag">Unique gifts and apparel</div>
           </div>
         </div>
 
