Update header text to include 'and faith'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <h1>Warm, meaningful finds - curated with purpose.</h1>
+        <h1>Warm, meaningful finds - curated with purpose and faith.</h1>
 
         <p class="lead">
           A quiet place to browse. Earth tones, honest materials, and rustic charm ~
