--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
       </div>
     </div>
   </div>
+  <p class="footer-sub">
+Website by <a href="https://blackstagweb.com" rel="noopener noreferrer">Black Stag Web Studio</a>
+</p>
 
   <script src="./app.js"></script>
 </body>
